# openfusion

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODEX_INSTRUCTIONS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CODEX_V2_UPGRADE.md  EVALUATION.md  LITELLM.md  MIGRATION_V2.md  RELEASE_V2.md  RESEARCH.md  SECURITY.md
examples/: curl_openai_compatible.sh  eval_sample.jsonl  python_client.py  test_openfusion.ps1
src/openfusion/: __init__.py  cli.py  config.example.yaml  config.py  evaluation.py  fusion.py  providers.py  schema.py  server.py
tests/: test_config.py  test_evaluation.py  test_fusion.py  test_orchestration.py  test_providers.py  test_server.py
