[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-fusion-ai"
version = "0.2.0"
description = "Open-source multi-model orchestration and fusion for OpenAI-compatible LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "John Cheung and OpenFusion Contributors" }]
keywords = ["llm", "model-fusion", "multi-agent", "orchestration", "openai-compatible", "routing", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/johncheungmk/openfusion"
Repository = "https://github.com/johncheungmk/openfusion"
Issues = "https://github.com/johncheungmk/openfusion/issues"

[project.scripts]
openfusion = "openfusion.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openfusion = ["config.example.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
